<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:textSize="@dimen/title"
        android:id="@+id/textView" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/layout_top_margin"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            style="@style/button_style"
            android:text="@string/button_app1_text"
            android:onClick="sendMessage"
            android:id="@+id/button_spotify_streamer" />
        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            style="@style/button_style"
            android:text="@string/button_app2_text"
            android:onClick="sendMessage"
            android:id="@+id/button_scores" />
        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            style="@style/button_style"
            android:text="@string/button_app3_text"
            android:onClick="sendMessage"
            android:id="@+id/button_library" />
        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            style="@style/button_style"
            android:text="@string/button_app4_text"
            android:onClick="sendMessage"
            android:id="@+id/button_build_it" />
        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            style="@style/button_style"
            android:text="@string/button_app5_text"
            android:onClick="sendMessage"
            android:id="@+id/button_xyz_reader" />
        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            style="@style/button_style_red"
            android:text="@string/button_app6_text"
            android:onClick="sendMessage"
            android:id="@+id/button_capstone" />
    </LinearLayout>

</RelativeLayout>
